Improved page organization in dom.dbx to fix known XUpdate issues.
svn path=/trunk/eXist-1.0/; revision=288