@@ -361,7 +361,7 @@ public class DoubleValue extends NumericValue {
 		} else if (target == String.class)
 			return getStringValue();
 		else if (target == Boolean.class)
-			return new Boolean(effectiveBooleanValue());
+			return Boolean.valueOf(effectiveBooleanValue());
 		else if (target == Object.class)
 			return new Double(value);
 
