@@ -256,7 +256,7 @@ public class FloatValue extends NumericValue {
 		} else if (target == String.class)
 			return getStringValue();
 		else if (target == Boolean.class)
-			return new Boolean(effectiveBooleanValue());
+			return Boolean.valueOf(effectiveBooleanValue());
 		else if (target == Object.class)
 			return new Double(value);
 
